# proj_camera

proj_camera/: build.gradle  gradle.properties  settings.gradle
proj_camera/app/: CMakeLists.txt  build.gradle
proj_camera/app/dng_sdk/: build.gradle
proj_camera/app/dng_sdk/src/androidTest/java/com/example/dng_sdk/: ExampleInstrumentedTest.kt
proj_camera/app/dng_sdk/src/main/: AndroidManifest.xml
proj_camera/app/dng_sdk/src/main/java/: dngSdk.java
proj_camera/app/dng_sdk/src/main/jni/: native-lib.cpp
proj_camera/app/dng_sdk/src/main/res/values/: strings.xml  themes.xml
proj_camera/app/dng_sdk/src/main/res/values-night/: themes.xml
proj_camera/app/dng_sdk/src/test/java/com/example/dng_sdk/: ExampleUnitTest.kt
proj_camera/app/src/androidTest/java/com/example/proj_camera/: ExampleInstrumentedTest.kt
proj_camera/app/src/main/: AndroidManifest.xml
proj_camera/app/src/main/cpp/: CMakeLists.txt  dngSdk_lib.cpp  dngSdk_lib.h  proj_camera.cpp
proj_camera/app/src/main/cpp/dngSdk_source/: dng_flags.h
proj_camera/app/src/main/java/Utils/: AndroidBmpUtil.java  RotateTransformation.kt  SettingData.kt  ZoomUtil.kt  dngSDK.java  libRaw.java  nativeTest.java  rawSDK.java
proj_camera/app/src/main/java/com/example/proj_camera/: FindContours.java  FindContours2.java  GoodFeaturesToTrack.java  MainActivity.kt  RawActivity.kt  ResultActivity.kt
proj_camera/app/src/main/java/libraw/: build.gradle
proj_camera/app/src/main/java/libraw/src/androidTest/java/com/homesoft/photo/libraw/: ExampleInstrumentedTest.java
proj_camera/app/src/main/java/libraw/src/main/cpp/androidraw26/: androidraw26.cpp
proj_camera/app/src/main/java/libraw/src/main/java/com/homesoft/photo/libraw/: LibRaw.java  LibRaw26.java
proj_camera/app/src/main/jni/: CMakeLists.txt  native-lib.cpp  simple_dcraw.cpp  unprocessed_raw.cpp  unprocessed_raw.h
proj_camera/app/src/main/jni/libraw-0.21.1/: Android.mk
proj_camera/app/src/main/jni/libraw-0.21.1/internal/: dcraw_defs.h  dcraw_fileio_defs.h  dmp_include.h  libraw_cxx_defs.h
proj_camera/app/src/main/jni/libraw-0.21.1/src/: libraw_c_api.cpp  libraw_datastream.cpp
proj_camera/app/src/main/res/anim/: alpha_anim.xml
proj_camera/app/src/main/res/drawable/: background_drawable.xml  capture_btn.xml  circle_progress.xml  progress_bar_horizontal.xml  roundcorner.xml  roundcorner_clicked.xml  urine_square.xml
proj_camera/app/src/main/res/layout/: activity_main.xml  raw_activity.xml  result_activity.xml
proj_camera/app/src/main/res/values/: strings.xml  themes.xml
proj_camera/app/src/main/res/values-night/: themes.xml
proj_camera/app/src/test/java/com/example/proj_camera/: ExampleUnitTest.kt
proj_camera/gradle/wrapper/: gradle-wrapper.properties
proj_camera/opencv/: build.gradle
proj_camera/opencv/java/src/org/opencv/engine/: new_OpenCVEngineInterface.aidl
